--- a/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
+++ b/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
@@ -68,13 +68,29 @@
 					</tr>
 						{# Code to render user made content (title) #}
 					{% elseif item.entity.field_newsletter_content_title.value|render %}
-					<tr id="feature-article-user-title-email-{{key}}">
-						<td align="center" style="text-align: left; padding-right:10px; padding-left:10px">
-							<h3>
-								{{ item.entity.field_newsletter_content_title|view }}
-							</h3>
-						</td>
-					</tr>
+						{% if item.entity.field_newsletter_content_url.0.url %}
+							{% set actual_url = item.entity.field_newsletter_content_url.0.url.toString() %}
+							{% set is_absolute = (actual_url starts with 'http://' or actual_url starts with 'https://') %}
+							{% set final_url = is_absolute ? actual_url : (base_url ~ actual_url) %}
+
+							<tr id="feature-article-user-title-email-{{ key }}">
+								<td align="center" style="text-align: left; padding-right:10px; padding-left:10px">
+									<a href="{{ final_url }}">
+										<h3>
+											{{ item.entity.field_newsletter_content_title|view }}
+										</h3>
+									</a>
+								</td>
+							</tr>
+						{% else %}
+							<tr id="feature-article-user-title-email-{{ key }}">
+								<td align="center" style="text-align: left; padding-right:10px; padding-left:10px">
+									<h3>
+										{{ item.entity.field_newsletter_content_title|view }}
+									</h3>
+								</td>
+							</tr>
+						{% endif %}
 					{% endif %}
 				{# Code to render selected article content (categories) #}
 				{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_categories is not empty %}
@@ -169,11 +185,22 @@
 	
 													{# Code to render user made content (title) #}
 												{% elseif item.entity.field_newsletter_content_title.value|render %}
+													{% if item.entity.field_newsletter_content_url.0.url %}
+														{% set actual_url = item.entity.field_newsletter_content_url.0.url.toString() %}
+														{% set is_absolute = (actual_url starts with 'http://' or actual_url starts with 'https://') %}
+														{% set final_url = is_absolute ? actual_url : (base_url ~ actual_url) %}
+														<a href="{{ final_url }}">
+															<h3 style="font-size: 18px;">
+															{{ item.entity.field_newsletter_content_title|view }}
+															</h3>
+														</a>
+													{% else %}
 												<td>
 													<h3 style="font-size: 18px;">
 														{{ item.entity.field_newsletter_content_title|view }}
 													</h3>
 												</td>
+													{% endif %}
 												{% endif %}
 												</tr>											
 												{# Categories #}
@@ -208,7 +235,7 @@
 								{# Code to render user made content (content text) #}
 							{% elseif item.entity.field_newsletter_content_text.value|render %}
 								<tr>
-									<td>{{ item.entity.field_newsletter_content_text|view }}</td>
+									<td style="padding-left: 0px;">{{ item.entity.field_newsletter_content_text|view }}</td>
 								</tr>
 							{% endif %}
 											</tbody>
