Finalize newsletter links

--- a/css/ucb-newsletter.css
+++ b/css/ucb-newsletter.css
@@ -72,3 +72,8 @@
 .newsletter-social-lightbox a{
   color: black;
 }
+
+a.ucb-newsletter-content-title{
+  color:inherit;
+  text-decoration: none;
+}
