--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -49,8 +49,7 @@
 #}
 
 
-<div
-  class="layout-container ucb-page-container highlight-style">
+<div class="layout-container ucb-page-container highlight-style">
   {# HEADER CONTENT #}
   {% block page_header %}
     {{ attach_library('boulder_base/ucb-social-media') }}
