--- a/templates/layout/page--node--layout.html.twig
+++ b/templates/layout/page--node--layout.html.twig
@@ -53,7 +53,7 @@
   <div{{ create_attribute({ class: ['ucb-page-content', ucb_heading_font == 'normal' ? 'ucb-heading-font-normal'] }) }}>
     {{ page.highlighted }}
     {{ page.help }}
-    <main role="main">
+    <main class="ucb-content-wrapper" role="main">
       <h1>{{ page['#title'] }}</h1>
       {{ page.content }}
     </main>
