--- a/templates/paragraphs/paragraph--newsletter-section.html.twig
+++ b/templates/paragraphs/paragraph--newsletter-section.html.twig
@@ -109,8 +109,7 @@
 			<div class="row row-content">
 				{% for key, item in paragraph.field_newsletter_section_select %}
 					{%  if key|first != '#' %}
-						<div class="col-lg-6 col-12 pb-4">
-
+						<div class="{{paragraph.field_newsletter_section_select|length > 1 ? 'col-lg-6' : '' }} col-12 pb-4">
 							<div
 							class="teaser-article-img px-2">
 							{# Code to render selected article content (thumbnail) #}
