Field machine name refactor
Refactored code to use machine name rather than label value.
For grabbing machine name from list fields you need to use `element['#object'].get('FIELD_NAME').value` as machine names aren't in the render array.

--- a/templates/field/field--field-bs-content-font-scale.html.twig
+++ b/templates/field/field--field-bs-content-font-scale.html.twig
@@ -1,7 +1,10 @@
 {% for item in items %}
-	{% if item.content|render|striptags|trim == 'Increase' %}
+	{% set scaleChoice = element['#object'].get('field_bs_content_font_scale').value %}
+
+
+	{% if scaleChoice == 'bs_content_font_scale_increase' %}
 		{% set blockContentScale = 'bs-content-scale-increase' %}
-	{% elseif item.content|render|striptags|trim == 'Decrease' %}
+	{% elseif scaleChoice == 'bs_content_font_scale_decrease' %}
 		{% set blockContentScale = 'bs-content-scale-decrease' %}
 	{% else %}
 		{% set blockContentScale = 'bs-content-scale-default' %}
