--- a/templates/field/field--field-bs-title-font-scale.html.twig
+++ b/templates/field/field--field-bs-title-font-scale.html.twig
@@ -1,8 +1,10 @@
 {% for item in items %}
+	{% set titleScaleChoice = element['#object'].get('field_bs_title_font_scale').value %}
 
-{% if item.content|render|striptags|trim == 'Increase' %}
+
+{% if titleScaleChoice == 'bs_title_font_scale_increase' %}
 	{% set blockTitleScale = 'bs-title-scale-increase' %}
-{% elseif item.content|render|striptags|trim == 'Decrease' %}
+{% elseif titleScaleChoice == 'bs_title_font_scale_decrease' %}
 	{% set blockTitleScale = 'bs-title-scale-decrease' %}
 {% else %}
 	{% set blockTitleScale = 'bs-title-scale-default' %}
