--- a/templates/field/field--field-bs-background-style.html.twig
+++ b/templates/field/field--field-bs-background-style.html.twig
@@ -1,31 +1,32 @@
 {% for item in items %}
+	{% set backgroundChoice = element['#object'].get('field_bs_background_style').value %}
 
-	{% if item.content|render|striptags|trim == 'White' %}
+	{% if backgroundChoice == 'bs_background_style_white' %}
 		{% set blockBackground = 'bs-background-white' %}
-	{% elseif item.content|render|striptags|trim == 'Gray' %}
+	{% elseif backgroundChoice == 'bs_background_style_gray' %}
 		{% set blockBackground = 'bs-background-gray' %}
-	{% elseif item.content|render|striptags|trim == 'Dark Gray' %}
+	{% elseif backgroundChoice == 'bs_background_style_dark_gray' %}
 		{% set blockBackground = 'bs-background-dark-gray' %}
-	{% elseif item.content|render|striptags|trim == 'Tan' %}
+	{% elseif backgroundChoice == 'bs_background_style_tan' %}
 		{% set blockBackground = 'bs-background-tan' %}
-	{% elseif item.content|render|striptags|trim == 'Light Blue' %}
+	{% elseif backgroundChoice == 'bs_background_style_light_blue' %}
 		{% set blockBackground = 'bs-background-light-blue' %}
-	{% elseif item.content|render|striptags|trim == 'Medium Blue' %}
+	{% elseif backgroundChoice == 'bs_background_style_medium_blue' %}
 		{% set blockBackground = 'bs-background-medium-blue' %}
-	{% elseif item.content|render|striptags|trim == 'Dark Blue' %}
+	{% elseif backgroundChoice == 'bs_background_style_dark_blue' %}
 		{% set blockBackground = 'bs-background-dark-blue' %}
-	{% elseif item.content|render|striptags|trim == 'Light Green' %}
+	{% elseif backgroundChoice == 'bs_background_style_light_green' %}
 		{% set blockBackground = 'bs-background-light-green' %}
-	{% elseif item.content|render|striptags|trim == 'Brick' %}
+	{% elseif backgroundChoice == 'bs_background_style_brick' %}
 		{% set blockBackground = 'bs-background-brick' %}
-	{% elseif item.content|render|striptags|trim == 'Outline' %}
+	{% elseif backgroundChoice == 'bs_background_style_outline' %}
 		{% set blockBackground = 'bs-background-outline' %}
-	{% elseif item.content|render|striptags|trim == 'Underline' %}
+	{% elseif backgroundChoice == 'bs_background_style_underline' %}
 		{% set blockBackground = 'bs-background-underline' %}
 	{% else %}
 		{% set blockBackground = 'bs-background-none' %}
 	{% endif %}
 
-	{{ blockBackground }}
+{{ blockBackground }}
 
 {% endfor %}
