--- a/templates/field/field--field-bs-heading-alignment.html.twig
+++ b/templates/field/field--field-bs-heading-alignment.html.twig
@@ -1,6 +1,8 @@
 {% for item in items %}
+	{% set headingAlignmentChoice = element['#object'].get('field_bs_heading_alignment').value %}
 
-	{% if item.content|render|striptags|trim == 'Centered' %}
+
+	{% if headingAlignmentChoice == 'bs_heading_align_centered' %}
 		{% set blockHeadingAlignment = 'bs-heading-align-centered' %}
 	{% else %}
 		{% set blockHeadingAlignment = 'bs-heading-align-default' %}
