--- a/templates/block/block--content-row.html.twig
+++ b/templates/block/block--content-row.html.twig
@@ -148,61 +148,63 @@
 		{% elseif layoutSelection == 3 %}
 			<div class="row row-col-lg-2 row-col-1 feature-row">
 				{% for key, item in content['#block_content'].field_row_layout_content %}
+        {% if loop.index0 < 3 %}
 					{% set rowLink = item.entity.field_row_layout_content_link.0.url|render %}
 					{% set smallFeatureBGValue = "background-image:url(#{ file_url( item.entity.field_row_layout_content_image.entity.field_media_image.entity.fileuri ) });background-repeat:no-repeat;background-position:center;background-size:cover;" %}
-					{% if (loop.index0 % 3 == 0) or (loop.index0 == 0) %}
-						<div class="col-lg-7">
-							<div class="feature-row-image-container feature-row-fill">
-								{% if rowLink %}
-									<a role="presentation" aria-hidden="true" href="{{ rowLink }} ">
-										{{ item.entity.field_row_layout_content_image|view }}
-									</a>
-								{% else %}
-									{{ item.entity.field_row_layout_content_image|view }}
-								{% endif %}
-								<div class="feature-row-text">
-									{% if rowLink %}
-										<a href="{{ rowLink }} ">
-											<h3>{{ item.entity.field_row_layout_content_title.0.value }}</h3>
-										</a>
-									{% else %}
-										<h3>{{ item.entity.field_row_layout_content_title.0.value }}</h3>
-									{% endif %}
-									{{ item.entity.field_row_layout_content_text|view }}
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-5 row small-feature-row">
-						{% elseif loop.index0 is odd %}
-							<div class="col-lg-12 small-feature">
-								<div class="small-feature-row-image-container" style={{ smallFeatureBGValue }}>
-									<div class="feature-row-text">
-										{% if rowLink %}
-											<a href="{{ rowLink }} ">
-												<h3>{{ item.entity.field_row_layout_content_title.0.value }}</h3>
-											</a>
-										{% else %}
-											<h3>{{ item.entity.field_row_layout_content_title.0.value }}</h3>
-										{% endif %}
-									</div>
-								</div>
-							</div>
-						{% else %}
-							<div class="col-lg-12 small-feature">
-								<div class="small-feature-row-image-container" style={{ smallFeatureBGValue }}>
-									<div class="feature-row-text">
-										{% if rowLink %}
-											<a href="{{ rowLink }} ">
-												<h3>{{ item.entity.field_row_layout_content_title.0.value }}</h3>
-											</a>
-										{% else %}
-											<h3>{{ item.entity.field_row_layout_content_title.0.value }}</h3>
-										{% endif %}
-									</div>
-								</div>
-							</div>
-						</div>
-					{% endif %}
+            {% if (loop.index0 % 3 == 0) or (loop.index0 == 0) %}
+              <div class="col-lg-7">
+                <div class="feature-row-image-container feature-row-fill">
+                  {% if rowLink %}
+                    <a role="presentation" aria-hidden="true" href="{{ rowLink }} ">
+                      {{ item.entity.field_row_layout_content_image|view }}
+                    </a>
+                  {% else %}
+                    {{ item.entity.field_row_layout_content_image|view }}
+                  {% endif %}
+                  <div class="feature-row-text">
+                    {% if rowLink %}
+                      <a href="{{ rowLink }} ">
+                        <h3>{{ item.entity.field_row_layout_content_title.0.value }}</h3>
+                      </a>
+                    {% else %}
+                      <h3>{{ item.entity.field_row_layout_content_title.0.value }}</h3>
+                    {% endif %}
+                    {{ item.entity.field_row_layout_content_text|view }}
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-5 row small-feature-row">
+              {% elseif loop.index0 is odd %}
+                <div class="col-lg-12 small-feature">
+                  <div class="small-feature-row-image-container" style={{ smallFeatureBGValue }}>
+                    <div class="feature-row-text">
+                      {% if rowLink %}
+                        <a href="{{ rowLink }} ">
+                          <h3>{{ item.entity.field_row_layout_content_title.0.value }}</h3>
+                        </a>
+                      {% else %}
+                        <h3>{{ item.entity.field_row_layout_content_title.0.value }}</h3>
+                      {% endif %}
+                    </div>
+                  </div>
+                </div>
+              {% else %}
+                <div class="col-lg-12 small-feature">
+                  <div class="small-feature-row-image-container" style={{ smallFeatureBGValue }}>
+                    <div class="feature-row-text">
+                      {% if rowLink %}
+                        <a href="{{ rowLink }} ">
+                          <h3>{{ item.entity.field_row_layout_content_title.0.value }}</h3>
+                        </a>
+                      {% else %}
+                        <h3>{{ item.entity.field_row_layout_content_title.0.value }}</h3>
+                      {% endif %}
+                    </div>
+                  </div>
+                </div>
+              </div>
+            {% endif %}
+          {% endif %}
 				{% endfor %}
 			</div>
 		{% else %}
